syntax = "proto3";

package http.cart;

option go_package = "/cart";

import "api.proto";
import "common.proto";
message AddCartReq {
  uint32 product_id = 1 [(api.form) = "productId"];
  int32 product_num = 2 [(api.form) = "productNum"];
}

service CartService {
  rpc AddCartItem(AddCartReq) returns (common.Empty) {
    option (api.post) = "/cart";
  }
  rpc GetCart(common.Empty) returns (common.Empty) {
    option (api.get) = "/cart";
  }
}