syntax = "proto3";

package http.product;

import "api.proto";
import "common.proto";
option go_package = "product";

message ProductReq {
  uint32 id = 1 [(api.query) = "id"];
}

message SearchProductsReq {
  string q = 1 [(api.query) = "q"];
}
message ListProductsReq{
  int32 page = 1;
  int64 pageSize = 2;
  string categoryName = 3;
}
message ListProductsResp {
  repeated Product products = 1;
}
message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;
  repeated string categories = 6;
}
service ProductCatalogService {
  rpc ListProducts(ListProductsReq) returns (ListProductsResp) {
    option (api.get) = "/products";
  }
  rpc GetProduct(ProductReq) returns (common.Empty) {
    option (api.get) = "/product";
  }
  rpc SearchProducts(SearchProductsReq) returns (common.Empty) {
    option (api.get) = "/search";
  }
}
