syntax = "proto3";

package  checkout;
import "api.proto";
option go_package = "github.com/Cui-Guo-crushed-his-team/CuiGuoMall/rpc/kitex_gen/checkout";

service CheckoutService {
  rpc Checkout(CheckoutReq) returns (CheckoutResp) {}
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string zip_code = 5;
}

message CheckoutReq {
  uint32 user_id = 1[(api.vt).gt = "0"];
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  Address address = 5;
  string payment_out_trade_no = 6;
}

message CheckoutResp {
  string order_id = 1;
  string transaction_id = 2;
  string pay_url = 3;
}